--- a/index.html
+++ b/index.html
@@ -14,24 +14,53 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <section class="section-hero">
-      <div class="hero">
-        <div class="hero-text-box">
-          <h1 class="heading-primary">
-            A healthy meal delivered to your door, every single day
-          </h1>
-          <p class="hero-description">
-            The smart 365-days-per-year food subscription that will make you eat
-            healthy again. Tailored to your personal tastes and nutritional
-            needs. We have delivered 250,000+ meals last year!
-          </p>
-          <a class="btn btn--full" href="#">Start eating well</a>
-          <a class="btn btn--outline" href="#">Learn more &rarr</a>
+    <main>
+      <header class="header">
+        <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
+        <nav class="main-nav">
+          <ul class="main-nav-list">
+            <li><a class="main-nav-link" href="#">Section 1</a></li>
+            <li><a class="main-nav-link" href="#">Section 2</a></li>
+            <li><a class="main-nav-link" href="#">Section 3</a></li>
+            <li><a class="main-nav-link" href="#">Section 4</a></li>
+          </ul>
+        </nav>
+      </header>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-description">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
+            </p>
+            <a class="btn btn--full margin-right-sm" href="#"
+              >Start eating well</a
+            >
+            <a class="btn btn--outline" href="#">Learn more &darr; </a>
+            <div class="delivered-meals">
+              <div class="delivered-imgs">
+                <img src="img/customers/customer-1.jpg" alt="customer-1" />
+                <img src="img/customers/customer-2.jpg" alt="customer-2" />
+                <img src="img/customers/customer-3.jpg" alt="customer-3" />
+                <img src="img/customers/customer-4.jpg" alt="customer-4" />
+                <img src="img/customers/customer-5.jpg" alt="customer-5" />
+                <img src="img/customers/customer-6.jpg" alt="customer-6" />
+              </div>
+              <p class="delivered-text">
+                Delivered <span>250,000+</span> meals last year!
+              </p>
+            </div>
+          </div>
+
+          <div class="hero-img-box">
+            <img class="hero-img" src="img/hero.png" alt="" />
+          </div>
         </div>
-        <div class="hero-img-box">
-          <img class="hero-img" src="img/hero.png" alt="" />
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
