add a circular shape to the images in how it works section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a class="main-nav-link" href="#">Section 2</a></li>
             <li><a class="main-nav-link" href="#">Section 3</a></li>
             <li><a class="main-nav-link" href="#">Section 4</a></li>
+            <li><a class="main-nav-link" href="#">Section 5</a></li>
           </ul>
         </nav>
       </header>
@@ -70,7 +71,7 @@
           </h2>
           <img src="img/" alt="" />
         </div>
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid-center-v">
           <div class="step-text-box">
             <p class="step-number">01</p>
             <h3 class="heading-teritery">
